# 2DEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
assets/: CMakeLists.txt
assets/shaders/: vertex.GLSL
src/: Application.cpp  Application.hpp  CMakeLists.txt  ConfigurationPanel.cpp  ConfigurationPanel.hpp  Layout.cpp  Layout.hpp  Logger.cpp  Logger.hpp  Panel.cpp  Panel.hpp  Primitives.hpp  RenderPanel.cpp  RenderPanel.hpp  Texture.hpp  Window.cpp  Window.hpp  main.cpp
src/application/: Application.cpp  CMakeLists.txt  ConfigurationPanel.cpp  ConfigurationPanel.hpp  ConfigurationView.cpp  ConfigurationView.hpp  Panel.cpp  Panel.hpp  RenderPanel.cpp  RenderPanel.hpp  RenderView.cpp  RenderView.hpp  ScenePanel.cpp  ScenePanel.hpp  SceneView.cpp  SceneView.hpp  Window.cpp  Window.hpp
src/ecs/: CMakeLists.txt  Scene.cpp  Scene.hpp  Transform.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/renderer/: Buffers.cpp  Buffers.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Draw.cpp  Draw.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
