cmake_minimum_required(VERSION 3.21)
project(2DEngine)
set(BUILD_SHARED_LIBS OFF)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(glfw3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(spdlog CONFIG REQUIRED)
find_package(imgui CONFIG REQUIRED)

add_subdirectory(src)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/assets/shaders/fragment.GLSL ${RUNTIME_OUTPUT_DIRECTORY}/assets/shaders/fragment.GLSL COPYONLY)
